Fixups for building without including KService/KIO/Plasma-Frameworks

- Add deprecation wrappers to guard the includes
- Add explicit public linkage to parts of the API we implicitly depended upon
- Bump version of plasma-frameworks linking checks to 5.91, because some changes in the headers were needed

BUG: 447908